--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qz-tray-noon",
+  "name": "qz-tray-noon-ts",
   "version": "1.0.0",
   "description": "this is npm package thats will use for the noon projects ",
   "repository": {
@@ -9,13 +9,17 @@
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
+  "pre-push": [
+    "prepare",
+    "prepublishOnly"
+  ],
   "scripts": {
     "build": "yarn build:esm && yarn build:cjs",
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "test": "jest --config jestconfig.json",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test"
+    "prepublishOnly": "npm run test"
   },
   "author": "Ahmed Atef (ahmedatefdev)",
   "devDependencies": {
@@ -25,6 +29,7 @@
     "jest": "^29.5.0",
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.5.0",
+    "pre-push": "^0.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-jest": "^29.0.5",
@@ -36,8 +41,12 @@
     "LICENSE",
     "README.md"
   ],
+  "dependencies": {
+    "tslib": "^2.5.0"
+  },
   "peerDependencies": {
-    "react": ">=16"
+    "react": ">=16",
+    "tslib": ">=2"
   },
   "keywords": [
     "react",
