--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "README.md"
   ],
   "dependencies": {
+    "axios": "^1.3.4",
+    "qz-tray": "^2.2.2",
     "tslib": "^2.5.0"
   },
   "peerDependencies": {
