--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.4.0",
+    "husky": "^3.0.9",
     "@types/react": "^18.0.28",
     "jest": "^29.5.0",
     "jest-canvas-mock": "^2.4.0",
@@ -57,5 +58,10 @@
     "qz-tray",
     "noon"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn prepare && yarn prepublishOnly"
+    }
+  }
 }
