--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "test": "jest --config jestconfig.json",
-    "prepare": "npm run build",
+    "prepare": "npm run build && husky install",
     "prepublishOnly": "npm run test"
   },
   "author": "Ahmed Atef (ahmedatefdev)",
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.4.0",
-    "husky": "^3.0.9",
+    "husky": "^8.0.0",
     "@types/react": "^18.0.28",
     "jest": "^29.5.0",
     "jest-canvas-mock": "^2.4.0",
@@ -58,10 +58,5 @@
     "qz-tray",
     "noon"
   ],
-  "license": "MIT",
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn prepare && yarn prepublishOnly"
-    }
-  }
+  "license": "MIT"
 }
