--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
   "types": "./dist/esm/index.d.ts",
   "pre-push": [
     "prepare",
-    "prepublishOnly"
+    "prepublishOnly",
+    "stash-every"
   ],
   "scripts": {
     "build": "yarn build:esm && yarn build:cjs",
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "test": "jest --config jestconfig.json",
-    "prepare": "npm run build && husky install",
-    "prepublishOnly": "npm run test"
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run test",
+    "stash-every": "git add . && git commit --amand --no-edit"
   },
   "author": "Ahmed Atef (ahmedatefdev)",
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.4.0",
-    "husky": "^8.0.0",
     "@types/react": "^18.0.28",
     "jest": "^29.5.0",
     "jest-canvas-mock": "^2.4.0",
