--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "types": "./dist/esm/index.d.ts",
   "pre-push": [
     "prepare",
-    "prepublishOnly",
-    "stash-every"
+    "prepublishOnly"
   ],
   "scripts": {
     "build": "yarn build:esm && yarn build:cjs",
@@ -20,8 +19,7 @@
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "test": "jest --config jestconfig.json",
     "prepare": "npm run build",
-    "prepublishOnly": "npm run test",
-    "stash-every": "git add . && git commit --amand --no-edit"
+    "prepublishOnly": "npm run test"
   },
   "author": "Ahmed Atef (ahmedatefdev)",
   "devDependencies": {
