--- a/package.json
+++ b/package.json
@@ -14,24 +14,29 @@
     "prepublishOnly"
   ],
   "scripts": {
-    "build": "yarn build:esm && yarn build:cjs",
-    "build:esm": "tsc",
-    "build:cjs": "tsc --module commonjs --outDir dist/cjs",
+    "build": "yarn clean && yarn build:esm && yarn build:cjs",
+    "build:esm": "tsc &&  yarn copy-files-cjs",
+    "build:cjs": "tsc --module commonjs --outDir dist/cjs &&  yarn copy-files-esm",
     "test": "jest --config jestconfig.json",
     "prepare": "npm run build",
-    "prepublishOnly": "npm run test"
+    "prepublishOnly": "npm run test",
+    "clean": "rimraf dist/",
+    "copy-files-cjs": "copyfiles -u 1 src/**/*.css dist/cjs/",
+    "copy-files-esm": "copyfiles -u 1 src/**/*.css dist/esm/"
   },
   "author": "Ahmed Atef (ahmedatefdev)",
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.4.0",
     "@types/react": "^18.0.28",
+    "copyfiles": "^2.4.1",
     "jest": "^29.5.0",
     "jest-canvas-mock": "^2.4.0",
     "jest-environment-jsdom": "^29.5.0",
     "pre-push": "^0.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rimraf": "^4.4.0",
     "ts-jest": "^29.0.5",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5"
